<resources>
    <string name="app_name">ShopPuppet</string>
    <string name="enter_up_to_3_letters_to_represent_your_shop">Enter up to 3 letters to represent your shop.</string>
    <string name="custom_dialog_hint">ABC</string>
    <string name="add_new_item">Add New Item</string>
    <string name="recently_purchased_items">Recently Purchased Items</string>
    <string name="next">Next</string>
    <string name="delete_all_recently_purchased_items_description">Delete all recently purchased items</string>
    <string name="sort_list">Sort List</string>
    <string name="sort_list_alphabetically">Sort list alphabetically</string>
    <string name="sort_list_by_order_of_input">Sort list by order Of input</string>
    <string name="return_to_my_shops">Return to my shops</string>
    <string name="add_shop">Add Shop</string>
    <string name="mark_item_as_priority">Mark Item As Priority</string>
    <string name="save">Save</string>
    <string name="mark_item_as_a_priority">Mark item as a priority.</string>
    <string name="my_list">My List</string>
    <string name="my_shops">My Shops</string>
    <string name="open_shop">Open shop</string>
    <string name="item_name">Item Name</string>
    <string name="item_marked_as_a_priority">Item marked as a priority</string>
    <string name="delete_this_item">Delete this item.</string>
    <string name="edit_this_item">Edit this item.</string>
    <string name="show_shops_tagged_to_this_item">Show shops tagged to this item.</string>
    <string name="hide_shops_tagged_to_this_item">Hide shops tagged to this item.</string>
    <string name="shop_name">Shop Name</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="choose_color">Choose Color</string>
    <string name="preview">Preview</string>
    <string name="save_shop">Save Shop</string>
    <string name="start_over">Start Over</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="hardware">Hardware</string>
    <string name="store_front">Store Front</string>
    <string name="electronics">Electronics</string>
    <string name="store">Store</string>
    <string name="stroller">Stroller</string>
    <string name="books">Books</string>
    <string name="bull_s_eye">Bull\'s Eye</string>
    <string name="light_blue">Light Blue</string>
    <string name="green">Green</string>
    <string name="fashion_red">Fashion Red</string>
    <string name="dark_gray">Dark Gray</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="pink">Pink</string>
    <string name="navy_blue">Navy Blue</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="teal">Teal</string>
    <string name="brown">Brown</string>
    <string name="user_guide">User Guide</string>
    <string name="acquired_items">Acquired items</string>
    <string name="items_to_acquire">Items to acquire</string>
    <string name="user_guide_title">User Guide</string>
    <string name="my_shops_user_guide_message">
    <![CDATA[
        <b>Add a Shop:</b> Click on the &quot;Add Shops&quot; button.<br><br>
        <b>Delete a Shop:</b> Long-press on the shop you wish to remove.<br><br>
        <b>View Shopping List:</b> Tap the &quot;My List&quot; icon at the bottom of the screen.
    ]]>
</string>

    <string name="add_new_shop_user_guide_message">
    <![CDATA[
        <b>Shop Name:</b> Enter the name of the shop, then click next.<br><br>
        <b>Choose Icon:</b> Choose an Icon that to represent your shop or click the blue  &quot;a-z&quot; icon to use initials as an icon instead.<br><br>
        <b>Choose Color:</b> Choose a color to represent your shop.<br><br>
        <b>Preview:</b> If you are happy with the preview of your shop, click  &quot;Save Shop &quot;, or else  &quot;Start Over&quot;.
    ]]>
</string>

    <string name="my_shopping_list_user_guide_message">
    <![CDATA[
        <b>My Shopping List:</b> Click the &quot;Plus&quot; button to add items to your shopping list .<br><br>
        <b>View Tagged Shop(s):</b> Once your list is populated, click the &quot;Down&quot; arrow to view what shop(s) each item is tagged to. Items can be deleted or edited here by clicking on their respective icon.<br><br>
        <b>Sort List:</b> Click the &quot;A-Z&quot; icon to view the list in &quot;Alphabetical&quot; order, and the &quot;List&quot; icon to view the order it was saved.<br><br>
        <b>My Shops:</b> Once your list is complete Click the &quot;My Shops&quot; button at the bottom to start shopping.
    ]]>
</string>

    <string name="add_new_item_to_shopping_list">
    <![CDATA[
        <b>Add New Item:</b> Type the name of the item you are adding to your list, then click the &quot;Next&quot; button.<br><br>
        <b>Recently Purchased Items:</b> Any items you have purchased in the last 14 days will appear, so you can just &quot;Tap&quot; on the item insetad of having to retype it.<br><br>
        <b>Delete All Recently Purchased Items:</b> Click the &quot;Trash&quot; icon to delete all recently purchased items.<br><br>
        <b>Delete Single Recently Purchased Item:</b> Long Press on the individual item will prompt for deletion.
    ]]>
</string>

    <string name="tag_item_to_shops">
    <![CDATA[
        <b>Tag Item To Shop(s):</b> Tag the item to any shops where it is available. You can manage your shops in the &quot;My Shops&quot; section.<br><br>
        <b>Edit The Item:</b> Click on the &quot;Text&quot; box to edit the item name.<br><br>
        <b>Mark Item As Priority:</b> Click the &quot;Star&quot; icon to mark the item as a priority. It will be indicated with a star in your list and the shop-specific list. Shops with priority items will be marked in the &quot;My Shops&quot; section.<br><br>
        <b>Save Item:</b> Click the &quot;Save&quot; button after assigning the item to its respective shop(s). You will be returned to your list.<br><br>
    ]]>
</string>

    <string name="shop_user_guide">
    <![CDATA[
        <b>Items To Acquire:</b> Once you &quot;Check&quot; items from this shop it will drop it down into the &quot;Acquired&quot; items section.<br><br>
        <b>Acquired Items:</b> Once you have acquired your items from this shop, clicking the &quot;Purchased&quot; button will remove items from your list and any other shops these particular items are tagged to.
    ]]>
</string>

    <string name="you_currently_have_no_shops">
    <![CDATA[
        <b>You currently have no shops.</b><br><br>
        Click on the <b>Add Shops</b> button to create.<br><br>
        For further instructions, see the <b>User Guide</b> located in the menu. Each section of the app has its own user guide for your convenience.
    ]]>
</string>


    <string name="ok">OK</string>
    <string name="purchased">Purchased</string>
    <string name="menu">menu</string>
    <string name="car">Car</string>
    <string name="home">Home</string>
    <string name="bank">Bank</string>
    <string name="pets">Pets</string>
    <string name="use_shop_initials">Use shop initials</string>

    <string name="rv_recently_purchased_items_description">List of recently purchased items</string>
    <string name="your_shopping_list">Your shopping list</string>
    <string name="your_list_of_shops_you_can_tag_your_item_to">Your list of shops you can tag your item to</string>
    <string name="your_shops">Your Shops</string>
    <string name="proceed_to_next_step_after_entering_shop_name">Proceed to next step after entering shop name</string>
    <string name="proceed_to_the_next_step_after_selecting_your_icon">Proceed to the next step after selecting your icon</string>
    <string name="save_your_shop_if_you_are_satisfied_with_your_selection">Save your shop if you are satisfied with your selection</string>
    <string name="restart_the_process_of_adding_a_new_shop_clearing_all_current_selections">Restart the process of adding a new shop, clearing all current selections</string>
    <string name="items_will_appear_here">Items will appear here for 14 days after they are checked off as purchased from your shop(s)</string>


</resources>