<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/rv_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item_marked_as_a_priority"
        android:scaleX=".50"
        android:scaleY=".50"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:tint="@color/colorAccent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="16sp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toEndOf="@id/img_star"
        app:layout_constraintEnd_toStartOf="@id/iv_delete_item"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        app:layout_constraintEnd_toStartOf="@id/iv_edit_item"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:tint="@color/negativeAction"
        android:contentDescription="@string/delete_this_item" />

    <ImageButton
        android:id="@+id/iv_edit_item"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        app:layout_constraintEnd_toStartOf="@id/iv_arrow_down"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:tint="@color/positiveAction"
        android:contentDescription="@string/edit_this_item" />

    <ImageView
        android:id="@+id/iv_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_name"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/textColorDark"
        android:contentDescription="@string/show_shops_tagged_to_this_item" />

    <ImageView
        android:id="@+id/iv_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_arrow_up"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_name"
        app:layout_constraintVertical_bias="0.5"
        app:tint="@color/textColorDark"
        android:contentDescription="@string/hide_shops_tagged_to_this_item" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_shops"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:chipSpacingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_unpurchased_items"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/chip_group_shops" />




</androidx.constraintlayout.widget.ConstraintLayout>



